2000-02-20  Dave Camp  <campd@oit.edu>

	* event-channel-impl.c (impl_CosEventChannelAdmin_ProxyPushConsumer_push): Took out an unnecessary trace.

1999-11-29  Dave Camp  <campd@oit.edu>

	* Makefile.am: Don't build the typed event channel.

	* generic-factory-impl.c (impl_GNOME_GenericFactory_create_object): Disabled the gdf_typed_event_channel goad id.

1999-11-14  Martin Baulig  <martin@home-of-linux.org>

	* sequencer-impl.c, sequencer.h: New files.
	* generic-factory-impl.c (create_object): Added GDF_Sequencer.
	(supports): Likewise.

1999-11-14  Martin Baulig  <martin@home-of-linux.org>

	* event-consumer, event-supplier: Removed.

1999-11-13  Martin Baulig  <martin@home-of-linux.org>

	* Makefile.am: Don't create debugger-program-events-skelimpl.c.

1999-11-02  Martin Baulig  <martin@home-of-linux.org>

	Use the new typed event IDL compiler.

	* Makefile.am: Create debugger-program-events-skelimpl.c by
	using the new IDL compiler backend.

	* debugger-program-events-impl.c: Removed.
	* debugger-program-events.h: Removed.
	* private-event-structs.idl: Removed.

1999-11-01  Martin Baulig  <martin@home-of-linux.org>

	This is just a quick hack and will be removed again when we
	have the marshal/demarshal code working.

	* private-event-structs.idl: New file.
	* debugger-program-events-impl.c: New file.
	* debugger-program-events.h: New file.

1999-11-01  Martin Baulig  <martin@home-of-linux.org>

	First step to typed event channels.

	* typed-event-channel-impl.c, typed-event-channel.h: New files.

1999-11-01  Martin Baulig  <martin@home-of-linux.org>

	* orbit-event-server.c: Removed. This file has been splitted
	into the newly added ones.

	* gdf-event-server.c, gdf-event-server.h: New files.
	* event-channel-impl.c, event-channel.h: New files.
	* generic-factory-impl.c, generic-factory.h: New files.

1999-10-31  Martin Baulig  <martin@home-of-linux.org>

	* orbit-event-server.c: Start using the multi-thread ORB if we
	`HAVE_MULTI_THREADED_ORB'.
